Bug 352967 - Kmail crashed on exit
Summary: Kmail crashed on exit
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2015-09-21 07:53 UTC by Hussam Al-Tayeb
Modified: 2015-09-22 04:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Valgrind log (50.89 KB, text/x-log)
2015-09-21 17:05 UTC, Hussam Al-Tayeb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hussam Al-Tayeb 2015-09-21 07:53:48 UTC
Application: kmail (5.0.44 pre)
 (Compiled from sources)
Qt Version: 5.5.0
Operating System: Linux 4.2.0-4-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
I opened kmail. I did some minor testing:
I checked my emails. I opened the preferences dialog and closed it. I opened the filter editor and closed it (all without modifying anything).
Kmail then crashed on exit.

The crash can be reproduced sometimes.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f5997f22880 (LWP 1033))]

Thread 15 (Thread 0x7f5970227700 (LWP 1034)):
#0  0x00007f5994e56c3d in poll () from /usr/lib/libc.so.6
#1  0x00007f5987c8e282 in _xcb_conn_wait (c=c@entry=0x2069120, cond=cond@entry=0x2069160, vector=vector@entry=0x0, count=count@entry=0x0) at xcb_conn.c:459
#2  0x00007f5987c8fe17 in xcb_wait_for_event (c=0x2069120) at xcb_in.c:693
#3  0x00007f5971f633e1 in ?? () from /usr/lib/libQt5XcbQpa.so.5
#4  0x00007f5995772dd5 in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 14 (Thread 0x7f596da93700 (LWP 1035)):
#0  0x00007f5994e56c3d in poll () from /usr/lib/libc.so.6
#1  0x00007f598a5ea2b5 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f598a5ea3f2 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f59959c569b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#4  0x00007f5995967e73 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f599576d90d in QThread::exec() () from /usr/lib/libQt5Core.so.5
#6  0x00007f5995772dd5 in ?? () from /usr/lib/libQt5Core.so.5
#7  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 13 (Thread 0x7f596cc0a700 (LWP 1036)):
#0  0x00007f5994e56c3d in poll () from /usr/lib/libc.so.6
#1  0x00007f598a5ea2b5 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f598a5ea3f2 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f59959c5680 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#4  0x00007f5995967e73 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f599576d90d in QThread::exec() () from /usr/lib/libQt5Core.so.5
#6  0x00007f5995772dd5 in ?? () from /usr/lib/libQt5Core.so.5
#7  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 12 (Thread 0x7f595ffff700 (LWP 1039)):
#0  0x00007f5994e56c3d in poll () from /usr/lib/libc.so.6
#1  0x00007f598a5ea2b5 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f598a5ea3f2 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f59959c5680 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#4  0x00007f5995967e73 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f599576d90d in QThread::exec() () from /usr/lib/libQt5Core.so.5
#6  0x00007f5995772dd5 in ?? () from /usr/lib/libQt5Core.so.5
#7  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 11 (Thread 0x7f595f7fe700 (LWP 1040)):
#0  0x00007f5994e56c3d in poll () from /usr/lib/libc.so.6
#1  0x00007f598a5ea2b5 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f598a5ea3f2 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f59959c5680 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#4  0x00007f5995967e73 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f599576d90d in QThread::exec() () from /usr/lib/libQt5Core.so.5
#6  0x00007f5995772dd5 in ?? () from /usr/lib/libQt5Core.so.5
#7  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 10 (Thread 0x7f595effd700 (LWP 1045)):
#0  0x00007f5994e56c3d in poll () from /usr/lib/libc.so.6
#1  0x00007f598a5ea2b5 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f598a5ea3f2 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f59959c5680 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#4  0x00007f5995967e73 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f599576d90d in QThread::exec() () from /usr/lib/libQt5Core.so.5
#6  0x00007f5995772dd5 in ?? () from /usr/lib/libQt5Core.so.5
#7  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 9 (Thread 0x7f594d817700 (LWP 1054)):
#0  0x00007f598ae145ef in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f5985b50759 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f5985b507ac in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 8 (Thread 0x7f58feffb700 (LWP 1064)):
#0  0x00007f598ae145ef in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f59858351ea in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f5985b82598 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 7 (Thread 0x7f58fe7fa700 (LWP 1065)):
#0  0x00007f598ae145ef in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f59858363f3 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f5985b82598 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 6 (Thread 0x7f58fd3f8700 (LWP 1070)):
#0  0x00007f5994e56c3d in poll () from /usr/lib/libc.so.6
#1  0x00007f598a5ea2b5 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f598a5ea3f2 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f59959c5680 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#4  0x00007f5995967e73 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f599576d90d in QThread::exec() () from /usr/lib/libQt5Core.so.5
#6  0x00007f5995772dd5 in ?? () from /usr/lib/libQt5Core.so.5
#7  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 5 (Thread 0x7f58e7fff700 (LWP 1176)):
#0  0x00007f5994e56c3d in poll () from /usr/lib/libc.so.6
#1  0x00007f598a5ea2b5 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f598a5ea3f2 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f59959c5680 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#4  0x00007f5995967e73 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f599576d90d in QThread::exec() () from /usr/lib/libQt5Core.so.5
#6  0x00007f5995772dd5 in ?? () from /usr/lib/libQt5Core.so.5
#7  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7f58e77fe700 (LWP 1179)):
#0  0x00007f5994e56c3d in poll () from /usr/lib/libc.so.6
#1  0x00007f598a5ea2b5 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f598a5ea3f2 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f59959c5680 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#4  0x00007f5995967e73 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f599576d90d in QThread::exec() () from /usr/lib/libQt5Core.so.5
#6  0x00007f5995772dd5 in ?? () from /usr/lib/libQt5Core.so.5
#7  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7f58e60f7700 (LWP 1450)):
#0  0x00007f598ae145ef in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f59755ad5dd in ?? () from /usr/lib/libQt5Script.so.5
#2  0x00007f59755ad62c in ?? () from /usr/lib/libQt5Script.so.5
#3  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7f584a43c700 (LWP 1500)):
#0  0x00007f5994e5bfe9 in syscall () from /usr/lib/libc.so.6
#1  0x00007f598a6348dd in g_cond_wait_until () from /usr/lib/libglib-2.0.so.0
#2  0x00007f598a5bb5c1 in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007f598a5bbcf4 in g_async_queue_timeout_pop () from /usr/lib/libglib-2.0.so.0
#4  0x00007f598a6149ec in ?? () from /usr/lib/libglib-2.0.so.0
#5  0x00007f598a613e0c in ?? () from /usr/lib/libglib-2.0.so.0
#6  0x00007f598ae0e66c in start_thread () from /usr/lib/libpthread.so.0
#7  0x00007f5994e6094d in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7f5997f22880 (LWP 1033)):
[KCrash Handler]
#5  TemplateParser::CustomTemplates::slotTextChanged (this=0x37d67e0) at /home/hussam/src/local/kde/kdepim/src/kdepim5/templateparser/src/customtemplates.cpp:155
#6  0x00007f599599b623 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#7  0x00007f59968d0225 in ?? () from /usr/lib/libQt5Widgets.so.5
#8  0x00007f599599b7a7 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#9  0x00007f59968b272d in ?? () from /usr/lib/libQt5Widgets.so.5
#10 0x00007f59968b799f in QWidgetTextControl::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQt5Widgets.so.5
#11 0x00007f599599b988 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#12 0x00007f5995fe53d2 in ?? () from /usr/lib/libQt5Gui.so.5
#13 0x00007f599602c179 in QSyntaxHighlighter::setDocument(QTextDocument*) () from /usr/lib/libQt5Gui.so.5
#14 0x00007f599602c3c0 in QSyntaxHighlighter::~QSyntaxHighlighter() () from /usr/lib/libQt5Gui.so.5
#15 0x00007f5997398520 in PimCommon::PlainTextSyntaxSpellCheckingHighlighter::~PlainTextSyntaxSpellCheckingHighlighter (this=0x3861510, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/kdepim5/pimcommon/src/texteditor/plaintexteditor/plaintextsyntaxspellcheckinghighlighter.cpp:51
#16 0x00007f5995999b9d in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#17 0x00007f59959a3e0f in QObject::~QObject() () from /usr/lib/libQt5Core.so.5
#18 0x00007f598eae6850 in Sonnet::SpellCheckDecorator::~SpellCheckDecorator() () from /usr/lib/libKF5SonnetUi.so.5
#19 0x00007f599739336f in PimCommon::PlainTextEditor::PlainTextEditorPrivate::~PlainTextEditorPrivate (this=0x38345b0, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/kdepim5/pimcommon/src/texteditor/plaintexteditor/plaintexteditor.cpp:78
#20 PimCommon::PlainTextEditor::~PlainTextEditor (this=0x382ffc0, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/kdepim5/pimcommon/src/texteditor/plaintexteditor/plaintexteditor.cpp:108
#21 0x00007f599255b568 in TemplateParser::TemplatesTextEditor::~TemplatesTextEditor (this=0x382ffc0, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/kdepim5/templateparser/src/templatestexteditor.cpp:51
#22 TemplateParser::TemplatesTextEditor::~TemplatesTextEditor (this=0x382ffc0, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/kdepim5/templateparser/src/templatestexteditor.cpp:54
#23 0x00007f5995999b9d in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#24 0x00007f5996702e8f in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#25 0x00007f599255b3a0 in TemplateParser::TemplatesTextEdit::~TemplatesTextEdit (this=0x382ff80, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/kdepim5/templateparser/src/templatestextedit.cpp:31
#26 0x00007f5995999b9d in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#27 0x00007f5996702e8f in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#28 0x00007f5996814500 in QFrame::~QFrame() () from /usr/lib/libQt5Widgets.so.5
#29 0x00007f5995999b9d in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#30 0x00007f5996702e8f in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#31 0x00007f5996878210 in QSplitter::~QSplitter() () from /usr/lib/libQt5Widgets.so.5
#32 0x00007f5995999b9d in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#33 0x00007f5996702e8f in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#34 0x00007f599254b2c0 in TemplateParser::CustomTemplates::~CustomTemplates (this=0x37d67e0, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/kdepim5/templateparser/src/customtemplates.cpp:120
#35 0x00007f5995999b9d in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#36 0x00007f5996702e8f in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#37 0x00007f5997957105 in ConfigModuleTab::~ConfigModuleTab (this=0x37d64b0, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/build/kmail/../../kdepim5/kmail/configuredialog/configuredialog_p.h:25
#38 ComposerPageCustomTemplatesTab::~ComposerPageCustomTemplatesTab (this=0x37d64b0, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/build/kmail/../../kdepim5/kmail/configuredialog/configurecomposerpage.h:125
#39 ComposerPageCustomTemplatesTab::~ComposerPageCustomTemplatesTab (this=0x37d64b0, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/build/kmail/../../kdepim5/kmail/configuredialog/configurecomposerpage.h:125
#40 0x00007f5995999b9d in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#41 0x00007f5996702e8f in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#42 0x00007f5996878aa0 in QStackedWidget::~QStackedWidget() () from /usr/lib/libQt5Widgets.so.5
#43 0x00007f5995999b9d in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#44 0x00007f5996702e8f in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#45 0x00007f5996885310 in QTabWidget::~QTabWidget() () from /usr/lib/libQt5Widgets.so.5
#46 0x00007f5995999b9d in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#47 0x00007f5996702e8f in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#48 0x00007f5997956535 in ConfigModule::~ConfigModule (this=0x3071c50, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/build/kmail/../../kdepim5/kmail/configuredialog/configmodule.h:36
#49 ConfigModuleWithTabs::~ConfigModuleWithTabs (this=0x3071c50, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/build/kmail/../../kdepim5/kmail/configuredialog/configuredialog_p.h:57
#50 ComposerPage::~ComposerPage (this=0x3071c50, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/build/kmail/../../kdepim5/kmail/configuredialog/configurecomposerpage.h:270
#51 ComposerPage::~ComposerPage (this=0x3071c50, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/build/kmail/../../kdepim5/kmail/configuredialog/configurecomposerpage.h:270
#52 0x00007f5990369d7b in KCModuleProxy::deleteClient() () from /usr/lib/libKF5KCMUtils.so.5
#53 0x00007f599036a311 in KCModuleProxy::~KCModuleProxy() () from /usr/lib/libKF5KCMUtils.so.5
#54 0x00007f599036a4f0 in KCModuleProxy::~KCModuleProxy() () from /usr/lib/libKF5KCMUtils.so.5
#55 0x00007f598d7af1b7 in KPageWidgetItem::~KPageWidgetItem() () from /usr/lib/libKF5WidgetsAddons.so.5
#56 0x00007f598d7affa8 in ?? () from /usr/lib/libKF5WidgetsAddons.so.5
#57 0x00007f598d7affe8 in ?? () from /usr/lib/libKF5WidgetsAddons.so.5
#58 0x00007f598d7b2108 in ?? () from /usr/lib/libKF5WidgetsAddons.so.5
#59 0x00007f598d7a7d92 in KPageModel::~KPageModel() () from /usr/lib/libKF5WidgetsAddons.so.5
#60 0x00007f598d7aef60 in KPageWidgetModel::~KPageWidgetModel() () from /usr/lib/libKF5WidgetsAddons.so.5
#61 0x00007f5995999b9d in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#62 0x00007f5996702e8f in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#63 0x00007f598d7ae3d0 in KPageWidget::~KPageWidget() () from /usr/lib/libKF5WidgetsAddons.so.5
#64 0x00007f5995999b9d in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#65 0x00007f5996702e8f in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#66 0x00007f59978a4a98 in ConfigureDialog::~ConfigureDialog (this=0x2b6c320, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/kdepim5/kmail/configuredialog/configuredialog.cpp:76
#67 ConfigureDialog::~ConfigureDialog (this=0x2b6c320, __in_chrg=<optimized out>) at /home/hussam/src/local/kde/kdepim/src/kdepim5/kmail/configuredialog/configuredialog.cpp:78
#68 0x00007f5997800b3f in KMKernel::cleanup (this=this@entry=0x7ffe42c09d50) at /home/hussam/src/local/kde/kdepim/src/kdepim5/kmail/kmkernel.cpp:1396
#69 0x00000000004040b9 in main (argc=1, argv=0x7ffe42c09f78) at /home/hussam/src/local/kde/kdepim/src/kdepim5/kmail/main.cpp:152

Reported using DrKonqi
Comment 1 Hussam Al-Tayeb 2015-09-21 12:48:28 UTC
I think it is fixed in git.
Comment 2 Hussam Al-Tayeb 2015-09-21 16:20:25 UTC
nevermind, it still crashes with a fresh git snapshot.
http://pastebin.com/raw.php?i=tDv9aE9D
Comment 3 Hussam Al-Tayeb 2015-09-21 17:05:20 UTC
Created attachment 94665 [details]
Valgrind log

Valgrind log. not sure I ran it correctly though.
Comment 4 Laurent Montel 2015-09-21 20:03:37 UTC
it was not the same crash that today.
I found bug to fix it.
Comment 5 Laurent Montel 2015-09-21 20:21:18 UTC
Git commit a7bacb33d2edd0dd95a0750bc7c2bda5849be48f by Montel Laurent.
Committed on 21/09/2015 at 20:04.
Pushed by mlaurent into branch 'master'.

Fix Bug 352967 - Kmail crashed on exit

M  +4    -0    templateparser/src/customtemplates.cpp

http://commits.kde.org/kdepim/a7bacb33d2edd0dd95a0750bc7c2bda5849be48f
Comment 6 Hussam Al-Tayeb 2015-09-21 22:30:15 UTC
Thank you. It is however failing to build again:
This is the same build error as earlier.
[ 52%] Building CXX object kmail/CMakeFiles/kmailprivate.dir/undostack.cpp.o
[ 52%] Building CXX object kmail/CMakeFiles/kmailprivate.dir/kmkernel.cpp.o
/home/hussam/src/local/kde/kdepim/src/kdepim5/kmail/kmkernel.cpp:49:34: fatal error: messagelist/settings.h: No such file or directory
compilation terminated.
kmail/CMakeFiles/kmailprivate.dir/build.make:354: recipe for target 'kmail/CMakeFiles/kmailprivate.dir/kmkernel.cpp.o' failed
make[2]: *** [kmail/CMakeFiles/kmailprivate.dir/kmkernel.cpp.o] Error 1
CMakeFiles/Makefile2:5154: recipe for target 'kmail/CMakeFiles/kmailprivate.dir/all' failed
make[1]: *** [kmail/CMakeFiles/kmailprivate.dir/all] Error 2
Makefile:127: recipe for target 'all' failed
make: *** [all] Error 2
Comment 7 Hussam Al-Tayeb 2015-09-21 22:38:02 UTC
I did 
diff --git a/kmail/kmkernel.cpp b/kmail/kmkernel.cpp
index 82ebecf..4beeda4 100644
--- a/kmail/kmkernel.cpp
+++ b/kmail/kmkernel.cpp
@@ -46,7 +46,7 @@ using KMail::MailServiceImpl;
 #include "mailcommon/jobscheduler.h"
                                                                                 
 #include "MessageCore/MessageCoreSettings"                                      
-#include "messagelist/settings.h"                                               
+#include "messagelistsettings.h"                                                
 #include "messagelist/messagelistutil.h"
 #include "messageviewer/messageviewersettings.h"
 #include "MessageComposer/AkonadiSender"

and it continued compiling. I copied your earlier change.
Comment 8 Laurent Montel 2015-09-22 04:39:49 UTC
Hi, indeed build was broken. Fixed thanks