Fix Bug 352967 - Kmail crashed on exit

BUG: 352967